Criando o endpoint de exclusão de allocation
