# service/src/main/java/com/github/erf88/realmeet/controller/AllocationController.java
@@ -1,5 +1,6 @@
 package com.github.erf88.realmeet.controller;
 
+import static java.util.concurrent.CompletableFuture.runAsync;
 import static java.util.concurrent.CompletableFuture.supplyAsync;
 
 import com.github.erf88.realmeet.api.facade.AllocationsApi;
@@ -23,5 +24,11 @@ public class AllocationController implements AllocationsApi {
     public CompletableFuture<ResponseEntity<AllocationDTO>> createAllocation(CreateAllocationDTO createAllocationDTO) {
         return supplyAsync(() -> allocationService.createAllocation(createAllocationDTO), controllersExecutor)
             .thenApply(ResponseEntityUtils::created);
+    }
+
+    @Override
+    public CompletableFuture<ResponseEntity<Void>> deleteAllocation(Long id) {
+        return runAsync(() -> allocationService.deleteAllocation(id), controllersExecutor)
+                .thenApply(ResponseEntityUtils::noContent);
     }
 }
