# service/src/main/resources/api.yml
@@ -3,7 +3,7 @@ info:
   version: 1.0.0
   title: realmeet
 servers:
-  - url: 'http://localhost:3000'
+  - url: 'http://localhost:8080'
 
 paths:
   /rooms/{id}:
@@ -121,6 +121,25 @@ paths:
           description: Not Found
         422:
           $ref: '#/components/responses/UnprocessableEntity'
+
+    delete:
+      summary: 'Deletes an allocation by ID'
+      operationId: deleteAllocation
+      tags:
+        - allocation
+      parameters:
+        - name: id
+          required: true
+          in: path
+          description: ID of the allocation
+          schema:
+            type: integer
+            format: int64
+      responses:
+        204:
+          description: 'Deleted Successfully'
+        404:
+          description: Not Found
 
 components:
   schemas:
